--- a/MyDict/app/src/main/res/layout/activity_main.xml
+++ b/MyDict/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:orientation="vertical" >
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/searchEditText"
@@ -36,12 +37,60 @@
 
         </LinearLayout>
 
-        <ListView
-            android:id="@+id/dictionaryListView"
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="20dp">
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Từ tra"
+                android:textAppearance="?android:attr/textAppearanceLarge" />
+
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:id="@+id/speechImageButton"
+                android:src="@drawable/speaker"
+                android:layout_marginLeft="10dp" />
+
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:id="@+id/favoriteImageButton"
+                android:src="@drawable/favorite_star"
+                android:layout_marginLeft="10dp" />
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:textColor="@android:color/holo_green_dark"
+            android:text="Definition:"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:orientation="horizontal" />
+
+        <TextView
+            android:id="@+id/definitionTextView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-        </ListView>
+            android:layout_height="match_parent"
+            android:textColor="@android:color/holo_blue_light"
+            android:layout_margin="20dp"
+            android:text="Medium Text"
+            android:background="#49a8a8a8"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
+
+
 
 </RelativeLayout>
