--- a/MyDict/app/src/main/res/layout/activity_main.xml
+++ b/MyDict/app/src/main/res/layout/activity_main.xml
@@ -15,11 +15,17 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/searchEditText"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:layout_weight="4" />
+            <AutoCompleteTextView
+                android:id="@+id/autoCompleteTextView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/textView1"
+                android:ems="10"
+                android:text="">
+
+                <requestFocus />
+            </AutoCompleteTextView>
 
             <ImageButton
                 android:layout_width="30dp"
@@ -87,6 +93,7 @@
             android:layout_margin="20dp"
             android:text="Medium Text"
             android:background="#49a8a8a8"
+            android:scrollbars = "vertical"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
     </LinearLayout>
